k8s/apps/blog/blog-service.yml
apiVersion: v1
kind: Service
metadata:
  name: blog-service
spec:
  type: ClusterIP   # was NodePort
  selector:
    app: blog-app
  ports:
    - port: 80
      targetPort: 8080
      # was nodePort: 30007
